// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FigureTileContent /> should render a figure tile content with heading only 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        textWidth={36}
        type="display-large"
      >
        1
      </Styled(Text)>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        type="heading"
      >
        dummy heading
      </Styled(Text)>
    </styled.div>
    <styled.div />
  </styled.div>
  <styled.div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with label 1`] = `
<styled.div>
  <styled.label>
    dummy label
  </styled.label>
  <styled.div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with normal headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        textWidth={46}
        type="display-large"
      >
        1
      </Styled(Text)>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        type="heading"
      >
        dummy heading
      </Styled(Text)>
    </styled.div>
    <styled.div>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        textWidth={46}
        type="display"
      >
        35
      </Styled(Text)>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        type="small"
      >
        dummy subheading
      </Styled(Text)>
    </styled.div>
  </styled.div>
  <styled.div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with nothing 1`] = `
<styled.div>
  <styled.div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with subheading only 1`] = `
<styled.div>
  <styled.div>
    <styled.div />
    <styled.div>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        textWidth={46}
        type="display"
      >
        35
      </Styled(Text)>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        type="small"
      >
        dummy subheading
      </Styled(Text)>
    </styled.div>
  </styled.div>
  <styled.div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with warning headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        textWidth={46}
        type="display-large"
      >
        1
      </Styled(Text)>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        type="heading"
      >
        dummy heading
      </Styled(Text)>
    </styled.div>
    <styled.div>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        textWidth={46}
        type="display"
      >
        35
      </Styled(Text)>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        type="small"
      >
        dummy subheading
      </Styled(Text)>
    </styled.div>
  </styled.div>
  <styled.div />
</styled.div>
`;
